fixed spacing on homepage

--- a/docs/style.css
+++ b/docs/style.css
@@ -23,6 +23,10 @@ img {
 }
 
 .fahed {
-	margin-left: 25%;
+	margin-left: 35%;
 	width: 15%;
+}
+
+.image {
+	width: 10%;
 }
